--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
-
 {
   "name": "bp-profile-field-duplicator",
   "version": "0.1.0",
   "main": "Gruntfile.js",
   "author": "Bunty",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-wp-i18n": "~0.5.0",
+    "grunt": "^1.0.4",
+    "grunt-wp-i18n": "^1.0.3",
     "grunt-wp-readme-to-markdown": "~1.0.0"
   }
 }
