Update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
     - master
 
 install:
-  - composer install
+  - composer global require "squizlabs/php_codesniffer=*"
 
 jobs:
   include:
