--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,14 @@ branches:
   only:
     - master
 
-install:
-  - composer global require "squizlabs/php_codesniffer=*"
+before_script:
+  - composer require squizlabs/php_codesniffer
+  - phpenv rehash
+  - phpcs -i
+  - phpenv rehash
+  - phpcs --config-set installed_paths $(pear config-get php_dir)/PHP/CodeSniffer/Standards
+  - phpcs --config-set error_severity 0
+  - phpcs --config-set warning_severity 0
 
 jobs:
   include:
