--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
-sudo: false
-dist: trusty
-
 language: php
-php: 7.2
+sudo: required
+php:
+  - 5.5
 
-branches:
-  only:
-    - master
+before_install:
+  - rm -rf ~/.gnupg
+  - sudo apt-get install xvfb
+
+before_script:
+  ## PHP_CodeSniffer
+  - pear install pear/PHP_CodeSniffer-2.9.0
+  - git clone git://github.com/wimg/PHPCompatibility.git $(pear config-get php_dir)/PHP/CodeSniffer/Standards/PHPCompatibility
+  - phpenv rehash
+  - phpcs -i
+  - phpenv rehash
+  - phpcs --config-set installed_paths $(pear config-get php_dir)/PHP/CodeSniffer/Standards
+  - phpcs --config-set error_severity 0
+  - phpcs --config-set warning_severity 0
+
+script:
+  ## PHP_CodeSniffer
+  - phpcs --standard=PHPCompatibility --runtime-set testVersion 5.3-5.5 $(find ./ -name '*.php')
+  - if find . -name "*.php" ! -path "./node_modules/*" -exec php -l {} 2>&1 \; | grep "syntax error, unexpected"; then exit 1; fi
